💄 prevent input form to overflow

--- a/frontend/packages/erd-core/src/features/erd/components/ERDRenderer/CommandPalette/CommandPaletteSearchInput/CommandPaletteSearchInput.module.css
+++ b/frontend/packages/erd-core/src/features/erd/components/ERDRenderer/CommandPalette/CommandPaletteSearchInput/CommandPaletteSearchInput.module.css
@@ -37,6 +37,11 @@
   position: absolute;
   top: 0;
   padding: var(--spacing-2) 0;
+  max-width: 100%;
+  overflow-x: hidden;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
+  color: var(--overlay-60);
 }
 
 .suggestion .inputValue {
@@ -44,7 +49,7 @@
 }
 
 .suggestion .completionSuffix {
-  color: var(--overlay-60);
+  text-wrap: nowrap;
 }
 
 .searchIcon {
